--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 dist: trusty
 
 script:
-  - git clone git@github.com:citueda/RaspberryPiMouse.git 
+  - git clone https://github.com/citueda/RaspberryPiMouse.git 
   - reboot
   - cd RaspberryPiMouse
   - ls
