--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ dist: trusty
 
 script:
   - git clone https://github.com/citueda/RaspberryPiMouse.git 
-  - reboot
+  - sudo reboot
   - cd RaspberryPiMouse
   - ls
