--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ script:
   - git clone https://github.com/citueda/RaspberryPiMouse.git 
   - cd RaspberryPiMouse/utils
   - sudo bash ./build_install.ubuntu14.bash
-  - sudo reboot
-  - ls /dev/rt*
+  - cd
+  - sudo bash -evx ./setup.bash
