--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,8 @@ dist: trusty
 
 script:
   - sudo apt-get install linux-headers-$(uname -r)
-  - sudo crontab ./crontab.conf
   - git clone https://github.com/citueda/RaspberryPiMouse.git 
   - cd RaspberryPiMouse/utils
   - sudo bash ./build_install.ubuntu14.bash
-  - cd
+  - cd ~/raspimouse_setup
   - sudo bash -evx ./setup.bash
